* March 16 2006, Kristian Van Der Vliet *

Updated the Savage driver
	o Support "old" streams engine (overlays)
	o Fix overlays in 16bit mode with "new" streams
	o Support for off-screen bitmaps based on an early X.org EXA patch.  This is
	  currently disabled as I can not solve a rendering error in 16bit modes with
	  off-screen->screen blits.  Asyncronous rendering is enabled however.

* February 24 2006, Kristian Van Der Vliet *

Added a Maestro 1/2[E] driver.  Ported from the Linux 2.6 OSS driver and tested
on a Maestro 2E.  PCM output and mixer are functional.

* February 11 2006, Kaj de Vos *

Added objcopy from BinUtils to the base distribution, because it's needed by rescopy.

* January 27 2006, Arno Klenke *

Synced the geforcefx driver with the X driver. This will hopefully fix the FX5200 problems.

* January 26 2006, Kristian Van Der Vliet *

Added a USB printer driver.  The driver is a re-write of the Linux usblp driver
and has been tested with an EPSON Stylus Color 900 with CUPS and the Gutenprint
raster driver.

* January 25 2006, Kaj de Vos *

Rearranged the system initialization scripts.
Introduced an early-init directory for packages, to allow scripts to run before
user login, specifically to allow setting variables in the user's environment.
Introduced user-early-init.sh.
Renamed net_init.sh and user_init.sh to network-init.sh and user-init.sh, for
consistency and more natural writing.

* January 21 2006, Arno Klenke *

Updated generic acpi code
Updated irq wait handling in the ata busmanager to fix problems on virtual hardware

* January 17 2006, Arno Klenke *

Updated window selector in the appserver to show previews of the windows

* January 8 2006, Kaj de Vos *

Fixed package-specific initialization in /system/user_init.sh.

* January 2 2006, Arno Klenke *

Added the ACPI busmanager
Support for acpi irq routing in the PCI busmanager

---- 0.6.0a Released -------------------------------------------------------------------
