@@ -1,3 +1,8 @@
+* March 25 2006, Arno Klenke *
+
+The geforcefx driver should now work on cards which store their real pci device ids
+in a special register.
+
 * March 16 2006, Kristian Van Der Vliet *
 
 Updated the Savage driver
@@ -1007,3 +1012,4 @@ Added the following keymaps:
 * Jun 14 2002, Kristian Van Der Vliet *
 
 Implement get_tld(), set_tld() in process.c
+
